Do not install /usr/share/doc files.
Fixes: NB#149134 - Remove doc files from status-menu deb

Do not generate /usr/share/doc/*/changelog.gz files.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2009-12-03  Jan Arne Petersen  <jpetersen@openismus.com>
+
+	Do not install /usr/share/doc files.
+
+	Fixes: NB#149134 - Remove doc files from status-menu deb
+
+	* debian/rules (DEB_DH_INSTALLCHANGELOGS_ARGS): Do not generate
+	/usr/share/doc/*/changelog.gz files.
+
 2009-12-01  Jan Arne Petersen  <jpetersen@openismus.com>
 
 	Release 0.3.32.
