--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2009-12-09  Jan Arne Petersen  <jpetersen@openismus.com>
 
+	Release 0.3.33
+
+2009-12-09  Jan Arne Petersen  <jpetersen@openismus.com>
+
 	Enable status menu in portrait mode.
 
 	Fixes: NB#142949 - Active status area also in portrait
