--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2010-01-28  Jan Arne Petersen  <jpetersen@openismus.com>
+
+	Fixes NB#137235 for status menu.
+
+	* src/hd-status-menu.c: Remove internal border around status menu.
+
 2009-12-09  Jan Arne Petersen  <jpetersen@openismus.com>
 
 	Release 0.3.33
