--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+hildon-status-menu (0.3.34~unreleased) unstable; urgency=low
+
+  Jan Arne:
+  * Fixes NB#137235 for status menu.
+
+ -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Tue, 23 Feb 2010 17:15:56 +0200
+
 hildon-status-menu (0.3.33) unstable; urgency=low
 
   Jan Arne:
