--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-02-24  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>
+
+	Release 0.3.34
+	* configure.ac: 0.3.34
+
 2010-02-23  Gordon Williams <gordon.williams@collabora.co.uk>
 
 	Bug 157390 - Regression: application menu borders missing
