--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-hildon-status-menu (0.3.35~unreleased) unstable; urgency=low
+hildon-status-menu (0.3.35) unstable; urgency=low
 
-  * foo
+  * Fixes: NB#155459 - Portrait status menu should be full-width
 
- -- Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>  Wed, 24 Feb 2010 12:55:38 +0200
+ -- Adam Endrodi <adam.endrodi@blumsoft.eu>  Tue, 02 Mar 2010 11:13:23 +0200
 
 hildon-status-menu (0.3.34) unstable; urgency=low
 
