--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hildon-status-menu (0.3.36) unstable; urgency=low
+
+  * Fixes: NB#161862 applications status menu should react to "mouse up" event
+
+ -- Adam Endrodi <adam.endrodi@blumsoft.eu>  Tue, 23 Mar 2010 16:12:05 +0200
+
 hildon-status-menu (0.3.35) unstable; urgency=low
 
   * Fixes: NB#155459 - Portrait status menu should be full-width
