--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hildon-status-menu (0.3.37) unstable; urgency=low
+
+  * Hide the status menu when going to portrait.
+
+ -- Adam Endrodi <adam.endrodi@blumsoft.eu>  Fri, 26 Mar 2010 10:34:30 +0200
+
 hildon-status-menu (0.3.36) unstable; urgency=low
 
   * Fixes: NB#161862 applications status menu should react to "mouse up" event
