--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2010-03-29  Adam Endrodi <adam.endrodi@blumsoft.eu>
 
+	Release 0.3.38
+
+2010-03-29  Adam Endrodi <adam.endrodi@blumsoft.eu>
+
 	NB#162533 Unable to launch the status bar after continuously
 		  changing the phone oreintation in phone application
 
