--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2010-04-12  Adam Endrodi <adam.endrodi@blumsoft.eu>
+
+	* src/hd-status-area.c (hd_status_area_plugin_added_cb):
+	  Don't forget to destroy and remove the icons of removed
+	  status area plugins.
+
 2010-03-29  Adam Endrodi <adam.endrodi@blumsoft.eu>
 
 	Release 0.3.38
