--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2010-05-07  Adam Endrodi <adam.endrodi@blumsoft.eu>
+
+	NB#162675 desktop recompilation with G_DISABLE_CAST_CHECKS
+
+	* configure.ac: add to $CFLAGS
+
 2010-04-12  Adam Endrodi <adam.endrodi@blumsoft.eu>
 
 	* src/hd-status-area.c (hd_status_area_plugin_added_cb):
