--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2010-05-25  Adam Endrodi <adam.endrodi@blumsoft.eu>
+
+	Release 0.3.39
+
 2010-05-07  Adam Endrodi <adam.endrodi@blumsoft.eu>
 
 	NB#162675 desktop recompilation with G_DISABLE_CAST_CHECKS
