--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hildon-status-menu (0.3.40~unreleased) unstable; urgency=low
+
+  * :)
+
+ -- Adam Endrodi <adam.endrodi@blumsoft.eu>  Tue, 25 May 2010 13:18:16 +0300
+
 hildon-status-menu (0.3.39) unstable; urgency=low
 
   * Fixes: NB#162675 - desktop recompilation with G_DISABLE_CAST_CHECKS
