--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,10 @@
 
 	Release 0.3.39
 
+2010-05-25  Adam Endrodi <adam.endrodi@blumsoft.eu>
+
+	Added -DG_DEBUG_DISABLE.
+
 2010-05-07  Adam Endrodi <adam.endrodi@blumsoft.eu>
 
 	NB#162675 desktop recompilation with G_DISABLE_CAST_CHECKS
