--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2010-06-04  Adam Endrodi <adam.endrodi@blumsoft.eu>
+
+	* src/hd-status-area.c (hd_status_area_realize):
+	  Don't keep the background pixmap around.
+
 2010-05-25  Adam Endrodi <adam.endrodi@blumsoft.eu>
 
 	Release 0.3.39
