--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+hildon-status-menu (0.3.40-4) unstable; urgency=low
+
+  * Don't keep the background pixmap around.
+
+ -- Mohammad Abu-Garbeyyeh <mohammad7410@gmail.com>  Mon, 31 Jan 2011 14:17:52 +0200
+
+hildon-status-menu (0.3.40-3) unstable; urgency=low
+
+  * Version bumped.
+
+ -- Mohammad Abu-Garbeyyeh <mohammad7410@gmail.com>  Wed, 19 Jan 2011 16:37:55 +0200
+
 hildon-status-menu (0.3.40-2) unstable; urgency=low
 
   * Added portrait mode support
