--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hildon-status-menu (0.3.40-7) unstable; urgency=low
+
+  * Display 6 icons in the status menu in portrait mode.
+
+ -- Mohammad Abu-Garbeyyeh <mohammad7410@gmail.com>  Mon, 02 Jan 2012 15:24:24 +0200
+
 hildon-status-menu (0.3.40-6) unstable; urgency=low
 
   * Added a check, if the number of rows is 0 use a hardcoded default.
